# configuration-managment-mirea

./: README.md  pyproject.toml
task-1/: README.md  __main__.py
task-2/: README.md
task-3/: README.md
